@@ -1,3 +1,8 @@
+2006-07-26:
+	* src/stash.c(_pam_krb5_stash_clone): build the new ccache name by
+	appending the mkstemp template instead of assuming the previous file
+	ended with one
+
 2006-07-25:
 	* src/stash.c(_pam_krb5_stash_external_read): note when we try to
 	pick up external creds, and when we fail to do so.
